<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gor Mahia</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>


    <string name="thelaws">The Laws</string>
    <string name="constitution">The Constitution of Kenya</string>
    <string name="legalnotice">Legal Notice</string>
    <string name="legalnotices">Legal Notices</string>
    <string name="bills">Bills</string>
    <string name="amendment">Amendment Acts</string>
    <string name="eaclegis">EAC Legislation</string>
    <string name="repstatutes">Repealed Statutes</string>
    <string name="countyleg">County Legislation</string>
    <string name="recentleg">Recent Legislation</string>
    <string name="devlaws">Laws on Devolution</string>
    <string name="menu_settings">Settings</string>
    <string name="cd">Content Description</string>
    <string name="advhere">Advertise Here</string>
    <string name="broughtby">Brought to you by :-</string>
    <string name="giniwasekao">Gini Wasekao</string>
	
	<string name="action_contact">Contact</string>
	
	
	
	
</resources>
